# tech_demo

./: .gitignore  README.md  pyproject.toml
assets/llm2vec/: ressources.json
llm2vec/: analyse_results.py  demo.py  model_comparison.py  mteb_benchmark.py  ressources.py
src/llm2vec/: custom_llm2vec.py  model_factory.py  sentence_transformer_wrapper.py
