[project]
name = "tech-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "aygalic",email = "aygalic@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "torch (>=2.5.1,<3.0.0) ; sys_platform == \"darwin\"",
    "torchvision (>=0.20.1,<0.21.0) ; sys_platform == \"darwin\"",
    "torchaudio (>=2.5.1,<3.0.0) ; sys_platform == \"darwin\"",
    "llm2vec (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
