[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "aygalic",email = "aygalic@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "torch (>=2.5.1,<3.0.0) ; sys_platform == \"darwin\"",
    "torchvision (>=0.20.1,<0.21.0) ; sys_platform == \"darwin\"",
    "torchaudio (>=2.5.1,<3.0.0) ; sys_platform == \"darwin\"",
    "peft (==0.10.0)",
    "llm2vec @ git+https://github.com/McGill-NLP/llm2vec.git",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mteb (>=1.29.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

